--- a/test02.html
+++ b/test02.html
@@ -3,6 +3,9 @@
     <head>
         <title>Second Page</title>
         <link rel="stylesheet" href="MyStyle.css"/>
+        <script>
+            alert('Hello JavaScript..!');
+        </script>
     </head>
     <body>
         <h2>TEST</h2>
